@@ -1,6 +1,6 @@
 
 version 2.0-alpha XX-Jul-2011
-. [NEW] Added support for OpenGL ES 2.0. OpenGL ES 1.1 is no longer supported
+. [NEW] Action: Added new CallBlockO action
 . [NEW] AtlasNode: added init method
 . [NEW] ccGLState: added helper functions that keeps the GL state in order to prevent setters/getters
 . [NEW] CProgressTimer: 
@@ -12,11 +12,14 @@ version 2.0-alpha XX-Jul-2011
 . [NEW] Macros: ccgl* replaced with ccGL*
 . [NEW] Math: Using kazmath for matrix and projection operations, and matrix GL stack
 . [NEW] Math: Using NEON Matrix Multiplication from Oolong project
+. [NEW] OpenGL ES: Added support for OpenGL ES 2.0. OpenGL ES 1.1 is no longer supported
 . [NEW] Templates: Removed Xcode3 templates. Updated Xcode4 templates.
-. [NEW] Tests: FontTest uses  "bundle" fonts instead of FontLabel
 . [NEW] Tests: All tests use RootViewController
+. [NEW] Tests: FontTest uses  "bundle" fonts instead of FontLabel
 . [NEW] Tests: Removed HelloWorld* tests
+. [NEW] Tests: TextureTest has TextureCache#asyncWithBlock test
 . [NEW] Texture: Uses NPOT textures (gles20 already supports them)
+. [NEW] TextureCache: Added asyncWithBlock method
 . [NEW] Tiled: cc_vertexz property is no longer supported. Will raise exception if found.
 . [NEW] Types: ccColor*B replaced with ccColor*UB
 . [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
